fixed dark mode toggle & improved css

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,7 +1,13 @@
 :root {
 	--transition-speed: 100ms;
 
-	--background-colour: #282c34;
+	--background-colour-primary-dark: #282c34;
+	--background-colour-secondary-dark: #B8B8FF;
+	--background-colour-primary-light: #F8F7FF;
+	--background-colour-secondary-light: #ffeedd;
+	--background-colour-primary: var(--background-colour-primary-dark);
+	--background-colour-secondary: var(--background-colour-secondary-dark);
+	--text-colour: var(--background-colour-primary-light);
 }
 
 .App {
@@ -20,14 +26,14 @@
 }
 
 .App-header {
-  background-color: var(--background-colour);
+  background-color: var(--background-colour-primary);
   min-height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--text-colour);
 }
 
 @keyframes App-logo-spin {
